feat: Configuration production complète pour glp1-france.fr
- Configuration astro.config.mjs avec domaine glp1-france.fr
- Documentation complète pour déploiement GitHub
- Configuration Vercel et Netlify
- Variables d'environnement sécurisées
- Guides de migration et workflow Git
- Build testé et fonctionnel (23 pages)
- Prêt pour déploiement production

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 SITE_URL=http://localhost:4321
 NODE_ENV=development
 
+# Production
+# SITE_URL=https://glp1-france.fr
+# NODE_ENV=production
+
 # Configuration admin (à changer en production)
 ADMIN_PASSWORD=admin123_change_me
 
