feat: ajout script déploiement automatisé et configuration production
- Nouveau script deploy.mjs avec gestion staging/production
- Configuration .env.production avec toutes les variables
- Scripts npm deploy:staging et deploy:production
- Mise à jour checklist finale avec nouvelles étapes
- Base de données articles régénérée (74 articles, 9 catégories)

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "generate-database": "node scripts/generate-database-v2.mjs",
     "apply:prompt": "node scripts/apply-prompt.mjs prompts/next-prompt.txt",
     "clean": "rm -rf dist .astro",
+    "deploy": "node scripts/deploy.mjs",
+    "deploy:staging": "node scripts/deploy.mjs staging",
+    "deploy:production": "node scripts/deploy.mjs production",
     "type-check": "astro check",
     "lint": "echo 'No linting configured yet'",
     "test": "echo 'No tests configured yet'"
