--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --port 4321 --open",
     "build": "astro build",
-    "preview": "astro preview",
-    "start": "astro preview",
+    "preview": "astro preview --port 4321 --open",
+    "start": "astro preview --port 4321 --open",
     "generate": "node scripts/generate-from-csv.mjs glp-1_clusters_2025-08-07.csv",
     "generate-database": "node scripts/generate-database-v2.mjs",
     "apply:prompt": "node scripts/apply-prompt.mjs prompts/next-prompt.txt",
