PHASE 1-3 COMPLÈTE: Corrections critiques + documentation + header admin moderne
 CORRECTIONS CRITIQUES:
- Container ajouté dans article-content avec max-width 800px et padding approprié
- Problème double symboles listes résolu (suppression ::marker + détection JS)
- Footer complet avec CSS moderne et responsive
- Scripts cross-platform pour gestion des symboles automatique

 DOCUMENTATION COMPLÈTE:
- Guide déploiement cross-platform (Windows/Mac/Linux)
- README.md mis à jour avec section déploiement
- Instructions SSH et troubleshooting complets
- Workflow git documenté

 HEADER ADMIN MODERNISÉ:
- Design glassmorphism avec dégradés
- Animations d'entrée et micro-interactions
- Toggle mot de passe avec visibilité
- Responsive design mobile/tablet
- Indicateur de statut système
- Logo et branding cohérents

 NOUVEAUX FICHIERS:
- Scripts de déploiement Windows (.bat)
- Scripts cross-platform (.sh)
- Documentation complète (guides .md)
- Utilitaires PowerShell pour SSH

 PRÊT POUR: Synchronisation production et workflow unifié

--- a/package.json
+++ b/package.json
@@ -14,7 +14,27 @@
     "clean": "rm -rf dist .astro",
     "type-check": "astro check",
     "lint": "echo 'No linting configured yet'",
-    "test": "echo 'No tests configured yet'"
+    "test": "echo 'No tests configured yet'",
+    "predeploy": "npm run build",
+    "deploy": "deploy.bat",
+    "deploy:dry": "deploy-dry.bat",
+    "deploy:show-key": "powershell -ExecutionPolicy Bypass -File show-key.ps1",
+    "deploy:check": "curl -s -o /dev/null -w \"Status: %{http_code}, Time: %{time_total}s\" https://glp1-france.fr && echo",
+    "postdeploy": "npm run deploy:check",
+    "deploy:ps": "powershell -ExecutionPolicy Bypass -File deploy.ps1",
+    "deploy:setup": "bash scripts/setup.sh",
+    "deploy:setup-ps": "powershell -ExecutionPolicy Bypass -File setup.ps1",
+    "deploy:quick": "bash deploy.sh --skip-backup",
+    "deploy:rollback": "bash scripts/rollback.sh",
+    "maintenance:cleanup": "bash scripts/cleanup.sh",
+    "maintenance:stats": "bash scripts/cleanup.sh --stats-only",
+    "maintenance:full": "bash scripts/cleanup.sh --with-images --with-backup",
+    "monitoring:check": "bash scripts/monitoring.sh",
+    "monitoring:quick": "bash scripts/monitoring.sh --quick",
+    "monitoring:full": "bash scripts/monitoring.sh --full --json",
+    "seo:analyze": "node scripts/run-seo-analysis.mjs",
+    "seo:report": "node scripts/run-seo-analysis.mjs --save",
+    "collections:test": "node scripts/test-collections.mjs"
   },
   "dependencies": {
     "astro": "^4.10.0",
