--- a/package.json
+++ b/package.json
@@ -8,33 +8,15 @@
     "build": "astro build",
     "preview": "astro preview --port 4321 --open",
     "start": "astro preview --port 4321 --open",
+    "deploy": "deploy.bat",
+    "deploy:test": "deploy.bat --dry-run",
     "generate": "node scripts/generate-from-csv.mjs glp-1_clusters_2025-08-07.csv",
     "generate-database": "node scripts/generate-database-v2.mjs",
     "apply:prompt": "node scripts/apply-prompt.mjs prompts/next-prompt.txt",
     "clean": "rm -rf dist .astro",
     "type-check": "astro check",
     "lint": "echo 'No linting configured yet'",
-    "test": "echo 'No tests configured yet'",
-    "predeploy": "npm run build",
-    "deploy": "deploy.bat",
-    "deploy:dry": "deploy-dry.bat",
-    "deploy:show-key": "powershell -ExecutionPolicy Bypass -File show-key.ps1",
-    "deploy:check": "curl -s -o /dev/null -w \"Status: %{http_code}, Time: %{time_total}s\" https://glp1-france.fr && echo",
-    "postdeploy": "npm run deploy:check",
-    "deploy:ps": "powershell -ExecutionPolicy Bypass -File deploy.ps1",
-    "deploy:setup": "bash scripts/setup.sh",
-    "deploy:setup-ps": "powershell -ExecutionPolicy Bypass -File setup.ps1",
-    "deploy:quick": "bash deploy.sh --skip-backup",
-    "deploy:rollback": "bash scripts/rollback.sh",
-    "maintenance:cleanup": "bash scripts/cleanup.sh",
-    "maintenance:stats": "bash scripts/cleanup.sh --stats-only",
-    "maintenance:full": "bash scripts/cleanup.sh --with-images --with-backup",
-    "monitoring:check": "bash scripts/monitoring.sh",
-    "monitoring:quick": "bash scripts/monitoring.sh --quick",
-    "monitoring:full": "bash scripts/monitoring.sh --full --json",
-    "seo:analyze": "node scripts/run-seo-analysis.mjs",
-    "seo:report": "node scripts/run-seo-analysis.mjs --save",
-    "collections:test": "node scripts/test-collections.mjs"
+    "test": "echo 'No tests configured yet'"
   },
   "dependencies": {
     "astro": "^4.10.0",
