--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@astrojs/sitemap": "^3.4.2",
     "astro": "^4.10.0",
+    "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "papaparse": "^5.4.1",
     "slugify": "^1.6.6"
