--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.4.2",
+    "@astrojs/tailwind": "^6.0.2",
     "astro": "^4.10.0",
     "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "papaparse": "^5.4.1",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "tailwindcss": "^3.4.17"
   }
 }
