Système email complet: pages légales + formulaires intégrés Netlify + analytics
 Nouvelles fonctionnalités:
 Page politique de confidentialité (RGPD conforme)
 Page contact avec formulaire intégré
 Formulaire newsletter dans le footer
 Conversion guide beauté en lead magnet
 Dashboard analytics pour les données utilisateurs

 Intégrations techniques:
 Netlify Forms pour tous les formulaires
 Notifications email vers robin@glp1-france.fr
 Protection anti-spam avec honeypot
 Scripts d'analyse et export des données
 Configuration netlify.toml complète

 Analytics & Data:
 Script user-data-analyzer.mjs
 Dashboard admin accessible via /admin-user-data/
 Export CSV/JSON pour services d'emailing
 Suivi des conversions par source

 Documentation:
 GUIDE_EMAILS.md complet
 Instructions de test et déploiement
 Guide de gestion des données utilisateurs

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,31 @@
 [build.environment]
   NODE_VERSION = "18"
 
+# Configuration des formulaires Netlify
+[forms]
+  # Configuration pour recevoir les notifications par email
+  [forms.settings]
+    # Email de notification pour tous les formulaires
+    notification_email = "robin@glp1-france.fr"
+
+# Notifications pour le formulaire de contact
+[[forms]]
+  name = "contact"
+  notification_email = "robin@glp1-france.fr"
+  subject = "🆕 Nouveau message de contact - GLP-1 France"
+
+# Notifications pour la newsletter
+[[forms]]
+  name = "newsletter" 
+  notification_email = "robin@glp1-france.fr"
+  subject = "📧 Nouvelle inscription newsletter - GLP-1 France"
+
+# Notifications pour le guide beauté
+[[forms]]
+  name = "beauty-guide"
+  notification_email = "robin@glp1-france.fr"
+  subject = "📖 Nouveau téléchargement Guide Beauté - GLP-1 France"
+
 [[headers]]
   for = "/*"
   [headers.values]
