--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "optimize-images:responsive": "node scripts/optimize-images.mjs --responsive"
   },
   "dependencies": {
+    "@astrojs/node": "^8.3.4",
     "@astrojs/sitemap": "^3.4.2",
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^4.10.0",
