Config: TinaCMS configure pour branche production

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,11 @@
 # Configuration de déploiement GLP-1 France
 # Généré automatiquement
 
+# Configuration TinaCMS
+NEXT_PUBLIC_TINA_CLIENT_ID="d2c40213-494b-4005-94ad-b601dbdf1f0e"
+TINA_TOKEN="f5ae6be5c8b2d3dbb575918e775be87d1f4ec29d"
+NODE_ENV="production"
+
 # Configuration SSH
 SSH_USER="u403023291"
 SSH_HOST="147.79.98.140"
