--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -23,8 +23,15 @@ jobs:
     - name: Build Astro site
       run: npm run astro:build
     
+    - name: Setup SSH key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -p ${{ secrets.PORT }} ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+    
     - name: Deploy via SSH with debug
-      uses: appleboy/ssh-action@v0.1.7
+      uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.HOST }}
         port: ${{ secrets.PORT }}
@@ -39,7 +46,7 @@ jobs:
           ls -la ${{ secrets.REMOTE_PATH }}
     
     - name: Copy files via SCP with debug
-      uses: appleboy/scp-action@v0.1.4
+      uses: appleboy/scp-action@v1.0.3
       with:
         host: ${{ secrets.HOST }}
         port: ${{ secrets.PORT }}
@@ -51,7 +58,7 @@ jobs:
         strip_components: 1
     
     - name: Verify deployment
-      uses: appleboy/ssh-action@v0.1.7
+      uses: appleboy/ssh-action@v1.0.3
       with:
         host: ${{ secrets.HOST }}
         port: ${{ secrets.PORT }}
