--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -29,43 +29,24 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -p ${{ secrets.PORT }} ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+        chmod 644 ~/.ssh/known_hosts
     
-    - name: Deploy via SSH with debug
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.HOST }}
-        port: ${{ secrets.PORT }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        debug: true
-        script: |
-          echo "=== Cleaning target directory ==="
-          ls -la ${{ secrets.REMOTE_PATH }}
-          rm -rf ${{ secrets.REMOTE_PATH }}/*
-          echo "=== Directory cleaned ==="
-          ls -la ${{ secrets.REMOTE_PATH }}
-    
-    - name: Copy files via SCP with debug
-      uses: appleboy/scp-action@v1.0.0
-      with:
-        host: ${{ secrets.HOST }}
-        port: ${{ secrets.PORT }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        debug: true
-        source: "dist/*"
-        target: ${{ secrets.REMOTE_PATH }}
-        strip_components: 1
-    
-    - name: Verify deployment
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.HOST }}
-        port: ${{ secrets.PORT }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: |
-          echo "=== Final directory structure ==="
-          ls -la ${{ secrets.REMOTE_PATH }}
-          echo "=== Checking partenaires ==="
-          ls -la ${{ secrets.REMOTE_PATH }}/partenaires/ || echo "partenaires directory not found"
+    - name: Setup SSH key and deploy with rsync
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -p ${{ secrets.PORT }} ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+        chmod 644 ~/.ssh/known_hosts
+        
+        echo "=== Testing SSH connection ==="
+        ssh -o StrictHostKeyChecking=no -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} "echo 'SSH connection successful'"
+        
+        echo "=== Cleaning target directory ==="
+        ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} "rm -rf ${{ secrets.REMOTE_PATH }}/*"
+        
+        echo "=== Deploying files with rsync ==="
+        rsync -avz --delete -e "ssh -p ${{ secrets.PORT }}" dist/ ${{ secrets.USER }}@${{ secrets.HOST }}:${{ secrets.REMOTE_PATH }}/
+        
+        echo "=== Verifying deployment ==="
+        ssh -p ${{ secrets.PORT }} ${{ secrets.USER }}@${{ secrets.HOST }} "ls -la ${{ secrets.REMOTE_PATH }}/ && ls -la ${{ secrets.REMOTE_PATH }}/partenaires/ || echo 'partenaires directory not found'"
